# planner

./: .gitignore  README.md  docker-compose.yml
libs/direttore/: README.md  pyproject.toml
libs/direttore/src/direttore/: __init__.py
libs/direttore/src/direttore/orchestration/: __init__.py  event_queue.py
libs/direttore/src/direttore/orchestration/application/: __init__.py
libs/direttore/src/direttore/orchestration/auth/: __init__.py  access_checker.py  access_tags.py  auth_context.py  auth_resolver.py  exceptions.py
libs/direttore/src/direttore/orchestration/base_classes/: __init__.py  execution_resource_holder.py  repo.py  uow.py
libs/direttore/src/direttore/orchestration/base_types/: __init__.py  command_handler.py  event_handler.py  message.py  query_handler.py
libs/direttore/src/direttore/orchestration/event_dispatchers/: event_dispatcher.py  modular_event_dispatcher.py
libs/direttore/src/direttore/orchestration/modular_monolith/: __init__.py  coordinator.py  execution_dependencies.py  execution_runtime.py
libs/direttore/src/direttore/orchestration/registries/: __init__.py
libs/direttore/src/direttore/orchestration/resolvers/: container.py
libs/direttore/src/direttore/orchestration/tracing/: __init__.py  noop.py  ports.py
libs/direttore/src/direttore/testing/: __init__.py
libs/direttore/src/direttore/testing/fakes/: __init__.py  fake_auth_resolver.py  session.py  tracing.py  tracing_tree.py
libs/direttore/src/direttore/utils/: lazy_attribute.py  repository_registry.py
services/agent/: .env.example  README.md  notes.txt  pyproject.toml
services/agent/docs/: agent_server_overview.md  agent_workflows_architecture_summary.md  llm_runtime_architecture.md
services/agent/examples/: batch_drain_usage.py  bootstrap_llm.py  langgraph_session_usage.py  one_shot_complete.py
services/agent/scripts/: smoke_backend_contexts.py  smoke_backend_writes.py
services/agent/src/agent/: README.md  bootstrap.py  main.py  script.txt
services/agent/src/agent/api/: __init__.py  dependencies.py  exception_handlers.py  internal_conversations.py  internal_metrics.py  internal_workflows.py  schemas.py
services/agent/src/agent/application/dto/: __init__.py  agent_context.py  analytics.py  course.py  schedule.py  user.py
services/agent/src/agent/application/ports/: __init__.py  analytics_context.py  course_context.py  schedule_context.py  user_context.py
services/agent/src/agent/application/services/: __init__.py  agent_context_loader.py
services/agent/src/agent/conversation_agent/: __init__.py  input_guard.py  main_assistant.py  onboarding.py  runtime_context.py
services/agent/src/agent/conversation_agent/skills/: __init__.py  course_planning.md  loader.py  user_memory.md
services/agent/src/agent/conversation_agent/tools/: planner_tools.py
services/agent/src/agent/core/: backend_settings.py  settings.py
services/agent/src/agent/infrastructure/backend/: __init__.py  analytics_context_adapter.py  course_context_adapter.py  factory.py  http_client.py  parsing.py  schedule_context_adapter.py  user_context_adapter.py
services/agent/src/agent/infrastructure/llm/: __init__.py  pool.py  slot.py
services/agent/src/agent/infrastructure/observability/: __init__.py  langfuse.py  metrics.py
services/agent/src/agent/llm/: __init__.py  errors.py  models.py  orchestrator.py  pool.py  ports.py  session.py  slot.py
services/agent/src/agent/llm/adapters/: __init__.py  gigachat.py
services/agent/src/agent/llm/testing/: __init__.py  fake_provider.py
services/agent/src/agent/workflows/: __init__.py  session_close.py
services/agent/tests/: test_llm_pool.py
services/backend/: .env.example  README.md  logs.txt  pyproject.toml
services/backend/docs/: backend_domain_overview.md
services/backend/src/backend/: main.py
services/backend/src/backend/bootstrap/: container.py  contexts.py  coordinator.py  direttore.py  execution_dependencies.py  models.py  settings.py
services/backend/src/backend/context/analytics/: README.md
services/backend/src/backend/context/runtime/: README.md  runtime.md
services/backend/src/backend/shared/: logging.py
services/backend/src/backend/shared/application/: __init__.py  handler_configs.py
services/backend/src/backend/shared/auth/: __init__.py  access_checker.py  auth_context.py  auth_input.py  backend_auth_notes.md  backend_auth_resolver.py  errors.py  jwt_token_service.py
services/backend/src/backend/shared/security/: password_hashing.py
services/telegram-gateway/: .env.example  AGENT.md  README.md  pyproject.toml
services/telegram-gateway/docs/: telegram_gateway_overview.md
services/telegram-gateway/scripts/: check_webhook.sh  drop_pending_updates.sh  get_updates.sh  set_webhook.sh
services/telegram-gateway/src/telegram_gateway/: __init__.py  bootstrap.py  logging.py  main.py  settings.py
services/telegram-gateway/src/telegram_gateway/adapters/: deduplication.py
services/telegram-gateway/src/telegram_gateway/adapters/inbound/: api.py  dependencies.py  exception_handlers.py  mappers.py  schemas.py
services/telegram-gateway/src/telegram_gateway/adapters/outbound/: closed_session_publisher.py  conversation_store.py  database.py  redis_conversation_store.py  redis_update_deduplicator.py  repository.py  unit_of_work.py
services/telegram-gateway/src/telegram_gateway/application/: errors.py  run_with_typing_indicator.py
services/telegram-gateway/src/telegram_gateway/application/ports/: agent_client.py  backend_client.py  binding_cache.py  closed_session_publisher.py  conversation_store.py  runtime_status_cache.py  telegram_binding_repository.py  telegram_message_sender.py  telegram_update_deduplicator.py  telegram_webhook_manager.py  unit_of_work.py
services/telegram-gateway/src/telegram_gateway/application/services/: binding_service.py  conversation_service.py
services/telegram-gateway/src/telegram_gateway/application/use_cases/: __init__.py  attach_telegram.py  authenticate_business_user.py  close_agent_session.py  (+7 more)
services/telegram-gateway/src/telegram_gateway/domain/: events.py  models.py
(+317 files in other folders)
