[project]
name = "direttore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "blenlkj", email = "sblenlkj@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
