[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "blenlkj", email = "sblenlkj@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gigachat>=0.2.1",
    "langchain>=1.3.4",
    "langchain-core>=1.4.2",
    "langchain-gigachat>=0.5.1",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
agent = "agent:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
