[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "blenlkj", email = "sblenlkj@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "direttore",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
direttore = { path = "../../../../coding/python/projects/orchestrator/orchestration-kernel", editable = true } # "../../libs/direttore"