[project]
name = "telegram-gateway"
version = "0.1.0"
description = "Planner Telegram Gateway D2V"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
]

[project.scripts]
telegram-gateway = "telegram_gateway.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_gateway"]
